# meta-middleware-generic-support

./: .gitignore  AAMP-UVE-API.md  AAMPAnomalyMessageType.h  AampBufferControl.cpp  AampBufferControl.h  AampCMCDCollector.cpp  AampCMCDCollector.h  AampCacheHandler.cpp  AampCacheHandler.h  AampConfig.cpp  AampConfig.h  AampDRMLicPreFetcher.cpp  AampDRMLicPreFetcher.h  AampDRMLicPreFetcherInterface.h  AampDefine.h  AampDrmCallbacks.h  AampDrmSystems.h  AampEvent.cpp  AampEvent.h  AampEventListener.cpp  AampEventManager.cpp  AampEventManager.h  AampGrowableBuffer.cpp  AampGrowableBuffer.h  AampGstUtils.cpp  AampGstUtils.h  AampHandlerControl.cpp  AampHandlerControl.h  AampJsonObject.cpp  AampJsonObject.h  AampLLDASHData.h  AampLogManager.h  AampMPDDownloader.cpp  AampMPDDownloader.h  AampMPDParseHelper.cpp  AampMPDParseHelper.h  AampMPDPeriodInfo.h  AampMPDUtils.cpp  AampMPDUtils.h  AampMediaType.h  (+114 more)
middleware/: CMakeLists.txt  GstHandlerControl.cpp  GstUtils.cpp  GstUtils.h  InterfacePlayerPriv.h  InterfacePlayerRDK.cpp  InterfacePlayerRDK.h  PlayerLogManager.cpp  PlayerLogManager.h  PlayerScheduler.cpp  PlayerUtils.cpp  PlayerUtils.h  ProcessHandler.cpp
middleware/OSX/: OSxSetup.md
middleware/baseConversion/: CMakeLists.txt
middleware/closedcaptions/: PlayerCCManager.cpp
middleware/drm/: ClearKeyDrmSession.cpp  ClearKeyDrmSession.h  DrmSession.cpp  DrmSession.h  DrmSessionManager.cpp  DrmSessionManager.h  DrmUtils.cpp  DrmUtils.h  drmsessionfactory.cpp  drmsessionfactory.h
middleware/drm/helper/: WidevineDrmHelper.cpp
middleware/drm/ocdm/: opencdmsessionadapter.cpp  opencdmsessionadapter.h
middleware/playerLogManager/: CMakeLists.txt
middleware/test/utests/fakes/: FakeGStreamer.cpp  FakeGstUtils.cpp  FakeSocInterface.cpp
middleware/test/utests/mocks/: MockGstUtils.h  MockOpenCdm.h
plugins/gst-plugins-rdk-aamp/: CMakeLists.txt  gstaamp.cpp  gstaamp.h  gstaampinit.cpp  gstaampsrc.cpp  gstaampsrc.h
plugins/gst-plugins-rdk-aamp/drm/ave/: StubsForAVEPlayer.cpp
plugins/gst-plugins-rdk-aamp/drm/gst/: gstaampcdmidecryptor.cpp  gstaampcdmidecryptor.h  gstaampclearkeydecryptor.cpp  gstaampclearkeydecryptor.h  gstaampplayreadydecryptor.cpp  gstaampplayreadydecryptor.h  gstaampverimatrixdecryptor.cpp  gstaampverimatrixdecryptor.h  gstaampwidevinedecryptor.cpp  gstaampwidevinedecryptor.h
plugins/gst-plugins-rdk-aamp/gst_subtec/: CMakeLists.txt  Readme.md  gstsubtecbin.cpp  gstsubtecmp4transform.cpp  gstsubtecsink.cpp  gstvipertransform.cpp
support/aampabr/: ABRManager.cpp  ABRManager.h  CMakeLists.txt  HybridABRManager.cpp  HybridABRManager.h  README.md
support/aampmetrics/: AudioCMCDHeaders.cpp  CMCDHeaders.cpp  CMCDHeaders.h  CMakeLists.txt  IPFragmentStatistics.h  IPHTTPStatistics.cpp  IPHTTPStatistics.h  IPLatencyReport.cpp  IPLatencyReport.h  IPLicnsStatistics.cpp  IPLicnsStatistics.h  IPProfileInfo.cpp  IPProfileInfo.h  IPSessionSummary.cpp  IPSessionSummary.h  IPVideoStat.cpp  IPVideoStat.h  ManifestGenericStats.cpp  ManifestGenericStats.h  StatsDefine.h  VideoCMCDHeaders.cpp
support/aampmetrics/test/: CMakeLists.txt  cmake_exclude_file.list  run_ut.sh
support/aampmetrics/test/Fake/: CMakeLists.txt  FakeAudioCMCDHeaders.cpp  FakeCMCDHeaders.cpp  FakeIPFragmentStatistics.cpp  FakeIPHTTPStatistics.cpp  FakeIPProfileInfoJSON.cpp  FakeIPVideoStat.cpp  FakeSubtitleCMCDHeaders.cpp
support/aampmetrics/test/tests/: CMakeLists.txt
test/utests/fakes/: CMakeLists.txt  FakeABRManager.cpp  FakeAampBufferControl.cpp  FakeAampCCManager.cpp  FakeAampCMCDCollector.cpp  FakeAampCacheHandler.cpp  FakeAampConfig.cpp  FakeAampCurlDownloader.cpp  FakeAampCurlStore.cpp  FakeAampDRMLicPreFetcher.cpp  FakeAampDRMSessionManager.cpp  FakeAampEvent.cpp  FakeAampEventListener.cpp  FakeAampEventManager.cpp  FakeAampGrowableBuffer.cpp  FakeAampGstPlayer.cpp  FakeAampJsonObject.cpp  FakeAampLicManager.cpp  FakeAampLogManager.cpp  FakeAampMPDDownloader.cpp  FakeAampMPDParseHelper.cpp  FakeAampMPDUtils.cpp  FakeAampMemoryUtils.cpp  FakeAampProfiler.cpp  FakeAampRfc.cpp  FakeAampSCTE35.cpp  FakeAampScheduler.cpp  FakeAampStreamSinkManager.cpp  FakeAampTrackWorker.cpp  FakeAampTsbAdMetaData.cpp  FakeAampTsbAdPlacementMetaData.cpp  FakeAampTsbAdReservationMetaData.cpp  FakeAampTsbMetaData.cpp  FakeAampUtils.cpp  FakeAampcliPlaybackCommand.cpp  FakeAampcliSubtecSimulator.cpp  FakeAdManager.cpp  FakeAudioCMCDHeaders.cpp  FakeBase16.cpp  FakeBase64.cpp  (+62 more)
test/utests/tests/: CMakeLists.txt
test/utests/tests/AampAbrTests/: AAMPAbrTests.cpp  AbrTests.cpp  CMakeLists.txt
test/utests/tests/AampBufferControlTests/: AampBufferControlTests.cpp  CMakeLists.txt
test/utests/tests/AampCMCDCollectorTests/: AampCMCDCollectorAampTests.cpp  AampCMCDCollectorTests.cpp  CMakeLists.txt
test/utests/tests/AampCacheHandlerTests/: AampCacheHandlerAampTests.cpp  AampCacheHandlerTests.cpp  CMakeLists.txt
test/utests/tests/AampCliSet/: CMakeLists.txt  ExecuteTests.cpp
test/utests/tests/AampCurlDownloader/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampDrmLegacy/: CMakeLists.txt  DrmSessionTests.cpp
test/utests/tests/AampDrmSecureClient/: CMakeLists.txt  DrmSessionTests.cpp
test/utests/tests/AampEventManagerTests/: AampEventManagerAampTests.cpp  AampEventManagerTests.cpp  CMakeLists.txt
test/utests/tests/AampEventTests/: AampEventTests.cpp  CMakeLists.txt
test/utests/tests/AampGrowableBuffer/: CMakeLists.txt  ConstructorsTests.cpp  FunctionalTests.cpp
test/utests/tests/AampGstPlayer/: CMakeLists.txt  FunctionalTests.cpp  PauseOnPlaybackTests.cpp
test/utests/tests/AampGstUtilsTests/: CMakeLists.txt  GstUtilsAAMPTests.cpp
test/utests/tests/AampLogManagerTests/: AampLogManagerAampTests.cpp  AampLogManagerTests.cpp  CMakeLists.txt
test/utests/tests/AampMPDDownloader/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampMPDParseHelper/: CMakeLists.txt  (+1 more)
tsb/: .gitignore  CMakeLists.txt  run_tests.sh
tsb/api/: TsbApi.h
tsb/src/: CMakeLists.txt  TsbLocationLock.cpp  TsbLocationLock.h  TsbLog.cpp  TsbLog.h  TsbSem.cpp  TsbSem.h  TsbStore.cpp
tsb/src/fs/: TsbFs.h
(+605 files in other folders)
